tests/valid_inputs/func_ret_void_expr.cpp

void g() {

}

void f() {
	return g();
}

int main() {

}
