tests/invalid_inputs/sema/cast_char_to_double.cpp

void f() {
	(char) 3.14;
}
